# vanillafixes

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  alsoft.ini  cpu.c  dll.c  dxvk.conf  launcher.c  loader.c  loader.h  macros.h  offsets.h  os.c  os.h  pch.h  textfile.c  textfile.h  util.c  util.h
src/configs/: dlls.txt  dxvk.conf
src/dll/: CMakeLists.txt  cpu.c  dll.c  memory.c  memory.h  offsets.h  offsets_1_12_1.h  power.c  timer.c  tsc.c  tsc.h  util.c
src/launcher/: CMakeLists.txt  cmdline.c  cmdline.h  launcher.c  launcher.rc  localization.c  localization.h  main.c  selftest.c  selftest.h  sync.c  util.c
src/res/: launcher.rc
